jlamontSC-test/src/objects/Team_Participation__c.object
<CustomObject>
    <fields>
        <fullName>Club_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Club Entity/Team</label>
        <referenceTo>Club_Entity__c</referenceTo>
        <relationshipName>Team_Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Event_Action_Campaign_Description__c</fullName>
        <description>Formula to pull in description for reports and related lists</description>
        <formula>Event_Action__r.Promo_Description__c</formula>
        <label>Event/Action Campaign Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Action__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Event/Action Campaign</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Value must be an Advocacy Form, Events, or Offline Action campaign.</errorMessage>
            <filterItems>
                <field>Campaign.RecordTypeId</field>
                <operation>equals</operation>
                <value>Events, Advocacy Form, Offline Action</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Team_Participation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_Role__c</fullName>
        <label>Team Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>Coordination</fullName>
                </value>
                <value>
                    <fullName>Marketing</fullName>
                </value>
                <value>
                    <fullName>Tabling</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Event/Action Support</label>
    <nameField>
        <displayFormat>EAS-{0}</displayFormat>
        <label>Event/Action Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event/Action Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>